--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "main": "build/index.js",
+  "homepage": "https://nknwallet.io/wallet",
   "scripts": {
     "gulp": "./node_modules/.bin/gulp",
     "dev": "NODE_ENV=development npm run gulp dev; NODE_ENV=development ./node_modules/.bin/webpack-dev-server --config webpack/dev.js",
