--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "@babel/plugin-proposal-class-properties": "^7.4.0",
     "@babel/plugin-transform-async-to-generator": "^7.4.0",
     "@babel/plugin-transform-runtime": "^7.4.3",
+    "babel-preset-es2015": "^6.24.1",
     "chart.js": "^2.8.0",
     "classnames": "^2.2.6",
     "history": "^4.9.0",
