--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.4.3",
+    "@babel/plugin-proposal-class-properties": "^7.4.0",
     "@babel/preset-env": "^7.4.3",
     "@babel/preset-react": "^7.0.0",
     "autoprefixer": "^9.5.0",
@@ -42,10 +43,7 @@
     "webpack-dev-server": "^3.2.1"
   },
   "dependencies": {
-    "@babel/plugin-proposal-class-properties": "^7.4.0",
-    "@babel/plugin-transform-async-to-generator": "^7.4.0",
-    "@babel/plugin-transform-runtime": "^7.4.3",
-    "babel-preset-es2015": "^6.24.1",
+    "babel-polyfill": "^6.26.0",
     "chart.js": "^2.8.0",
     "classnames": "^2.2.6",
     "history": "^4.9.0",
