--- a/package.json
+++ b/package.json
@@ -2,50 +2,45 @@
   "main": "build/index.js",
   "homepage": "https://nknwallet.io/wallet",
   "scripts": {
-    "gulp": "./node_modules/.bin/gulp",
-    "dev": "NODE_ENV=development npm run gulp dev; NODE_ENV=development ./node_modules/.bin/webpack-dev-server --config webpack/dev.js",
-    "prod": "NODE_ENV=production npm run gulp prod; NODE_ENV=production ./node_modules/.bin/webpack --config webpack/prod.js",
-    "predeploy": "yarn run prod",
-    "deploy": "gh-pages -d build"
+    "dev": "./node_modules/.bin/gulp dev",
+    "prod": "./node_modules/.bin/gulp prod",
+    "gulp": "./node_modules/.bin/gulp"
   },
   "devDependencies": {
-    "@babel/core": "^7.4.3",
-    "@babel/preset-env": "^7.4.3",
-    "@babel/preset-react": "^7.0.0",
-    "autoprefixer": "^9.5.0",
-    "babel-eslint": "^10.0.1",
-    "babel-loader": "^8.0.5",
-    "css-loader": "^2.1.1",
-    "del": "^4.1.0",
-    "eslint": "^5.16.0",
+    "autoprefixer": "^9.1.0",
+    "babel-core": "^6.26.3",
+    "babel-eslint": "^8.2.6",
+    "babel-loader": "^7.1.5",
+    "babel-plugin-add-module-exports": "^0.2.1",
+    "babel-plugin-transform-class-properties": "^6.24.1",
+    "babel-plugin-transform-decorators-legacy": "^1.3.5",
+    "babel-plugin-transform-object-rest-spread": "^6.26.0",
+    "babel-preset-env": "^1.7.0",
+    "babel-preset-react": "^6.24.1",
+    "css-loader": "^1.0.0",
+    "del": "^3.0.0",
+    "eslint": "^5.5.0",
     "eslint-config-airbnb": "^17.1.0",
-    "eslint-plugin-import": "^2.16.0",
-    "eslint-plugin-jsx-a11y": "^6.2.1",
-    "eslint-plugin-react": "^7.12.4",
-    "gh-pages": "^2.0.1",
-    "gulp": "^4.0.0",
-    "gulp-cli": "^2.1.0",
+    "eslint-plugin-import": "^2.14.0",
+    "eslint-plugin-jsx-a11y": "^6.1.1",
+    "eslint-plugin-react": "^7.11.1",
+    "express": "^4.16.3",
+    "gulp": "^3.9.1",
+    "gulp-cli": "^2.0.1",
     "gulp-eslint": "^5.0.0",
     "gulp-replace": "^1.0.0",
-    "less": "^3.9.0",
+    "less": "^3.8.1",
     "less-loader": "^4.1.0",
-    "mini-css-extract-plugin": "^0.5.0",
-    "optimize-css-assets-webpack-plugin": "^5.0.1",
     "postcss-loader": "^3.0.0",
-    "prop-types": "^15.7.2",
     "string-replace-loader": "^2.1.1",
-    "style-loader": "^0.23.1",
-    "uglifyjs-webpack-plugin": "^2.1.2",
-    "url-loader": "^1.1.2",
-    "webpack": "^4.29.6",
-    "webpack-cli": "^3.3.0",
-    "webpack-dev-server": "^3.2.1"
+    "style-loader": "^0.22.1",
+    "uglifyjs-webpack-plugin": "^1.2.7",
+    "url-loader": "^1.0.1",
+    "webpack": "^4.17.0"
   },
   "dependencies": {
-    "@babel/plugin-proposal-class-properties": "^7.4.0",
-    "@babel/plugin-transform-async-to-generator": "^7.4.0",
-    "@babel/plugin-transform-runtime": "^7.4.3",
-    "babel-preset-es2015": "^6.24.1",
+    "axios": "^0.18.0",
+    "babel-polyfill": "^6.26.0",
     "chart.js": "^2.8.0",
     "classnames": "^2.2.6",
     "history": "^4.9.0",
@@ -53,12 +48,13 @@
     "nkn-wallet": "^0.2.0",
     "node-fetch": "^2.3.0",
     "normalize.css": "^8.0.1",
+    "qrcode": "^1.3.3",
     "rc-dropdown": "^2.4.1",
     "rc-menu": "^7.4.22",
     "react": "^16.8.6",
     "react-chartkick": "^0.3.0",
     "react-dom": "^16.8.6",
-    "react-redux": "^6.0.1",
+    "react-redux": "^7.0.1",
     "react-router-dom": "^5.0.0",
     "redux": "^4.0.1",
     "redux-thunk": "^2.3.0",
