--- a/src/images/favicon/manifest.json
+++ b/src/images/favicon/manifest.json
@@ -1,7 +1,5 @@
 {
- "name": "NKNWallet",
- "short_name": "NKNWallet",
- "description": "A cross-platform wallet for NKN network.",
+ "name": "App",
  "icons": [
   {
    "src": "\/android-icon-36x36.png",
