--- a/package.json
+++ b/package.json
@@ -44,7 +44,7 @@
     "classnames": "^2.2.6",
     "history": "^4.9.0",
     "moment": "^2.24.0",
-    "nkn-wallet": "^0.2.0",
+    "nkn-wallet": "git://github.com/nknorg/nkn-wallet-js.git#devnet",
     "node-fetch": "^2.3.0",
     "normalize.css": "^8.0.1",
     "qrcode": "^1.3.3",
